--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-211.3KB/s(Youtube:不良林), server: 20.24.66.53, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇫🇷 法国-1.89MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-5.16MB/s(Youtube:不良林), server: sg2.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg2.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-523.7KB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 64078, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
   - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 未知国家-2.62MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇨🇳 台湾-1.66MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇭🇰 香港-425.1KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-304.0KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇺🇸 美国-786.0KB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
-  - {name: 🇺🇸 美国-429.2KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
+  - {name: 🇮🇳 印度-1.35MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-211.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 未知国家-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-786.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-429.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-211.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 未知国家-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-786.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-429.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-211.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 未知国家-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-786.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-429.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,30 +75,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-211.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 未知国家-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-786.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-429.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-211.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 未知国家-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-786.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-429.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +106,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-211.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 未知国家-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-786.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-429.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +131,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-211.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 未知国家-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-425.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-786.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-429.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
